<resources>
    <string name="app_name">Not Very Complex Calculator</string>
    <string name="type_first_number">Type First Number</string>
    <string name="first_num">First Num</string>
    <string name="plus">+</string>
    <string name="second_num">Second Num</string>
    <string name="divide">÷</string>
    <string name="subtract">-</string>
    <string name="multiply">×</string>
    <string name="number">Number</string>
    <string name="empty" />
    <string name="power">^</string>

</resources>