<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/divide"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/cos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="71dp"
        android:text="Cos"
        android:onClick="findCos"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/result"
        app:layout_constraintTop_toBottomOf="@+id/sub" />

    <EditText
        android:id="@+id/number2"
        android:layout_width="154dp"
        android:layout_height="130dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="34dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number|numberDecimal"
        android:text="@string/empty"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/sub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/number"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mult"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="105dp"
        android:backgroundTint="@color/teal_700"
        android:onClick="findProduct"
        android:text="@string/multiply"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add" />

    <Button
        android:id="@+id/sub"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="88dp"
        android:onClick="findSub"
        android:backgroundTint="@color/orange"
        android:text="@string/subtract"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add"
        app:layout_constraintTop_toBottomOf="@+id/number2"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/button5"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="105dp"
        android:backgroundTint="@color/teal_700"
        android:onClick="findDiv"
        android:text="@string/divide"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mult"
        app:layout_constraintTop_toBottomOf="@+id/sub" />

    <Button
        android:id="@+id/add"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="88dp"
        android:onClick="findSum"


        android:backgroundTint="@color/orange"
        android:text="@string/plus"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/mult"
        app:layout_constraintEnd_toStartOf="@+id/sub"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number" />

    <EditText
        android:id="@+id/number"

        android:layout_width="153dp"
        android:layout_height="130dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="22dp"
        android:ems="10"
        android:hint="@string/number"
        android:inputType="number|numberDecimal"
        android:text="@string/empty"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="40sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/add"
        app:layout_constraintEnd_toStartOf="@+id/number2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="123dp"
        android:layout_height="46dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="224dp"
        android:text="Answer"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number2" />

    <Button
        android:id="@+id/power"
        android:layout_width="48dp"
        android:layout_height="51dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="370dp"
        android:backgroundTint="@color/black"
        android:onClick="findPower"
        android:text="@string/power"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toStartOf="@+id/sub"
        app:layout_constraintStart_toEndOf="@+id/number"
        app:layout_constraintTop_toBottomOf="@+id/number2"
        tools:ignore="OnClick,UsingOnClickInXml" />

    <Button
        android:id="@+id/Sin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="71dp"
        android:text="Sin"
        android:onClick="findSin"
        app:layout_constraintBottom_toTopOf="@+id/mult"
        app:layout_constraintEnd_toStartOf="@+id/result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add" />

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="52dp"
        android:text="First Number"
        app:layout_constraintBottom_toTopOf="@+id/mult"
        app:layout_constraintEnd_toStartOf="@+id/result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sin" />

    <TextView
        android:id="@+id/hint2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="52dp"
        android:text="Second Number"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/result"
        app:layout_constraintTop_toBottomOf="@+id/cos" />


</androidx.constraintlayout.widget.ConstraintLayout>